# epocs-reconciliation

./: .gitignore  .hg_archival.txt  .hgignore  MakeDesktopShortcuts.bat  README.md  README.txt  UpdateEPOCS.bat
app/src/custom/ReflexConditioningSignalProcessing/: BackgroundTriggerFilter.cpp  BackgroundTriggerFilter.cpp.orig  BackgroundTriggerFilter.h  CMakeLists.txt  CMakeLists.txt.orig  CurrentControlCriteria.cpp  CurrentControlCriteria.cpp.orig  CurrentControlCriteria.h  D188ControlFilter.cpp  D188ControlFilter.h  D188Library.h  DS5ControlFilter.cpp  DS5ControlFilter.cpp.orig  DS5ControlFilter.h  DS5ControlFilter.h.orig  DS8library.h  DigitimerFilter.cpp  DigitimerFilter.h  NIDAQFilterAO.cpp  NIDAQFilterAO.cpp.orig  NIDAQFilterAO.h  NIDAQFilterAO.h.orig  PipeDefinition.cpp  PipeDefinition.cpp.orig  RangeIntegrator.cpp  RangeIntegrator.h  SharedMemoryOutputConnector.cpp  SharedMemoryOutputConnector.cpp.orig  SharedMemoryOutputConnector.h  TrapFilter.cpp  TrapFilter.h  Workaround4530.h
app/src/custom/ReflexConditioningSignalProcessing/.hg/: branch  dirstate  last-message.txt  undo.branch  undo.dirstate
app/src/custom/ReflexConditioningSignalProcessing/.hg/cache/: branch2-served  rbc-names-v1  rbc-revs-v1  tags2-visible
app/src/custom/ReflexConditioningSignalProcessing/.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo  undo.backup.fncache
app/src/custom/ReflexConditioningSignalProcessing/.hg/store/data/: _c_make_lists.txt.i  (+13 more)
app/src/custom/ReflexConditioningSignalProcessing/Backup/: NIDAQFilterAO.cpp  NIDAQFilterAO.h
app/src/custom/ReflexConditioningSignalProcessing/Libraries/: D128API.h  D188API.h  D188Library.lib  DS8library.lib  DS8libraryOldm1.lib  MixedCode.h
app/src/custom/ReflexConditioningSignalProcessing/Variations/: RangeIntegrator AddedStateInput.cpp  RangeIntegrator Original.cpp
app/src/custom/ReflexConditioningSignalProcessing/Variations/RangIntegrator New/: RangeIntegrator.cpp
app/src/custom/ReflexConditioningSignalProcessing/Variations/RangIntegrator Original/: RangeIntegrator.cpp
app/src/custom/ReflexConditioningSignalProcessing/cmdline/: CMakeLists.txt
(+2295 files in other folders)
